ColaboradoresApi/kubernetes/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: lrochadev/colaboradores-frontend
        name: nginx
        imagePullPolicy: Never
        ports:
        - containerPort: 80
