ColaboradoresApi/kubernetes/springappserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: springappserver
  name: springappserver
spec:
  type: NodePort
  ports:
  - protocol: TCP
    name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: springappserver
status:
  loadBalancer: {}
