ColaboradoresApi/kubernetes/springappserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: dev.local
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
          - path: /colaboradores
            backend:
              serviceName: springappserver
              servicePort: 8080
